Fixed the issue with the title not showing the same font size.

--- a/css/style01.css
+++ b/css/style01.css
@@ -38,6 +38,11 @@ h1, h2, h3, h4, h5, h6 {
 .briefs-wrap p{
   padding-top: 10px;
 }
+
+div.briefs-wrap > b > a {
+  font-size: 24px;
+}
+
 .wpp_position{
   color: #008743;
   font-size: 150%;
